testdata/baselines/reference/submodule/conformance/checkJsdocOptionalParamOrder.errors.txt
0.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(4,4): error TS8009: The '?' modifier can only be used in TypeScript files.
0.js(4,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(5,12): error TS8010: Type annotations can only be used in TypeScript files.
0.js(7,20): error TS1016: A required parameter cannot follow an optional parameter.


==== 0.js (5 errors) ====
    // @ts-check
    /**
     * @param {number} a
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {number} [b]
       ~~~~~~~~~~~~~~~~~~~
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param {number} c
    ~~~
!!! error TS8009: The '?' modifier can only be used in TypeScript files.
               ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function foo(a, b, c) {}
                       ~
!!! error TS1016: A required parameter cannot follow an optional parameter.
    